<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedicineReminder</string>
    <string name="action_settings">Settings</string>
    <string name="btCancel">Stop Alarm</string>
    <string name="btStart">Start Alarm</string>
    <string name="btEnd">Back</string>
    <string name="title_activity_notification">ZhenXin Alarm Reminder!</string>
    <string name="notification_string">You have been notified of an alarm!</string>
    <string name="medicine_name_hint">Medicine Name</string>
    <string name="medicine_daily_check_text">Taken Daily?</string>
    <string name="num_pills">How many pills are taken per instance?</string>
    <string name="title_activity_main">Zhen Xin</string>
    <string name="hello_world">Hello world!</string>
    <string name="pill_frequency_text">How many times per day are you taking this pill?</string>
    <string name="alarm_return_text">Return</string>
    <string name="view_list_desc">Reminders to take these pills will occur at these times:</string>
    <string name="title_activity_alarm_view">Alarm View</string>
    <string name="default_alarm_time_text">The alarm default time is set to 8 am. Press to change.</string>
    <string name="change_alarm_button_text">Change Default Time</string>
    <string name="title_activity_qr_scanned">QR Code Received</string>
    <string name="db_connection_string">DB Connection info here</string>
    <string name="qr_text">This is the QR Code.</string>
    <string name="title_activity_display_product">Product Information</string>

</resources>
