<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical"
    android:paddingTop="5dip"
    android:paddingBottom="5dip">

    <EditText android:id="@+id/medicine_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medicine_name_hint" />

    <TextView android:id="@+id/pill_frequency_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pill_frequency_text" />
    
    <EditText android:id="@+id/pill_frequency"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_alarm_time_text"
        android:layout_margin="25dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/alarm_edit_default_time"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/change_alarm_button_text" />
    
    <TextView android:id="@+id/pill_frequency_time_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView android:id="@+id/num_pills_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_pills"/>
    
    <EditText android:id="@+id/num_pills_check"
        android:layout_width="100dp"
        android:layout_height="wrap_content" 
        android:layout_gravity="right"
        android:inputType="numberSigned"/>
    
    <Button
        android:id="@+id/btStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btStart"
        android:onClick="startRepeatingTimer"
        tools:context=".WidgetAlarmManagerActivity" />
    <Button
        android:id="@+id/btCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btCancel"
        android:onClick="cancelRepeatingTimer"
        tools:context=".WidgetAlarmManagerActivity" />
    <Button
        android:id="@+id/btEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btEnd"
        android:onClick="onClickEnd" />

</LinearLayout>
